--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "libphonenumber-js": "^1.10.49",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-phone-input-2": "^2.15.1",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
