--- a/Client/package.json
+++ b/Client/package.json
@@ -16,7 +16,7 @@
     "react-hot-toast": "^2.4.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.18.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
