--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-google-maps": "^9.4.5",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
